add numero de dependentes

--- a/modulo-dom/exercicio-cadastro-de-devs/index.html
+++ b/modulo-dom/exercicio-cadastro-de-devs/index.html
@@ -8,6 +8,10 @@
     <script src="index.js"></script>
 </head>
 <body>
-    
+    <form id="form">
+        <label for="nameOfDev">Nome: </label>
+        <input id="nameOfDev"name="nameOfDev"type="text">
+        <button onclick="createInput()">>add tecnologia</button>
+    </form>
 </body>
 </html>
