--- a/modulo-dom/exercicio-cadastro-de-devs/index.html
+++ b/modulo-dom/exercicio-cadastro-de-devs/index.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="index.js"></script>
+    <script src="index.js" defer></script>
 </head>
 <body>
+    <h1>cadastro de Devs</h1>
     <form id="form">
         <label for="nameOfDev">Nome: </label>
         <input id="nameOfDev"name="nameOfDev"type="text">
-        <button onclick="createInput()">>add tecnologia</button>
+        <button id="btn-add-tech">add tecnologia</button>
+        <ul class="lista">
+
+        </ul>
     </form>
 </body>
 </html>
